MDEV-621: LP:693329 - Assertion `!is_interleave_error' failed on low optimizer_search_depth - When restore_prev_nj_state() is called for the table that is   the last remaining child of a nested join, do not leave that   nested join's bit in join->cur_embedding_map.